# UAV-PLATFORM-V2

./: .dockerignore  .env.example  .flake8  .gitignore  .project  CHANGELOG.md  Dockerfile.jre  LICENSE  PROJECT_DOCUMENT_INDEX.md  README.md  checkstyle.xml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  mvn_output.txt  package.json  pom.xml  pyproject.toml  pyrightconfig.json  security-audit-report.md  start.ps1  start.sh
api-gateway/: .project  Dockerfile  Dockerfile.runtime  README.md  pom.xml
argocd/: app-of-apps.yaml  application.yaml
common-utils/: .project  README.md  pom.xml  requirements-java.txt
console/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
data-assimilation-platform/: README.md  _fix_all.py  _fix_check.py  _fix_pass2.py
data-assimilation-service/: .project  Dockerfile  Dockerfile.runtime  README.md  pom.xml
deployments/: README.md
docker/: README.md
docs/: API_AGGREGATION_CONFIG.md  CHANGELOG.md  COMPLETE_BUILD_GUIDE.md  DATABASE_MANAGEMENT.md  DEPENDENCY_AUDIT.md  DOCKER.md  DOCUMENTATION_CHECKLIST.md  EXAMPLE.md  FEIGN_MIGRATION_GUIDE.md  FENGWU_DEPLOY.md  JWT_GUIDE.md  MAVEN_FIX.md  MOBILE_BUILD.md  PORTS_CONFIGURATION.md  PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_V2.md  PROJECT_README.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  UPGRADE_REPORT.md  api-versioning-guide.md  architecture.md  chaos-engineering-guide.md  data_assimilation_platform.md  database-optimization-guide.md  deployment-guide.md  deployment-ops-manual.md  improvement_suggestions.md  migration-tracker.md  operations-runbook.md  perf-test-template.md  performance-benchmark-report.md  phase2-completion-report.md  phase2-iteration-plan.md  phase5-completion-report.md  phase5-task-plan.md  release-runbook.md  spring-boot-4.1-migration-review.md  v1-v2-migration-guide.md  (+1 more)
edge-cloud-coordinator/: Dockerfile  README.md  ai_decision.py  api.py  circuit_breaker.py  circuit_breaker_api.py  coordinator.py  edge_ai_inference.py  security.py  (+8 more)
edge-sdk/cpp/: .clangd  CMakeLists.txt  README.md
edge-sdk/cpp/include/uav_edge/: config.h  dwa_planner.h  federated_client.h  flight_controller.h  model_runtime.h  offline_cache.h  path_planner.h  path_smoother.h  risk_assessor.h  trajectory_corrector.h  types.h  uav_edge.h  v2x_client.h
edge-sdk/cpp/src/: config.cpp  dwa_planner.cpp  edge_core.cpp  federated_client.cpp  flight_controller.cpp  model_runtime.cpp  offline_cache.cpp  path_planner.cpp  path_smoother.cpp  risk_assessor.cpp  trajectory_corrector.cpp  v2x_client.cpp
(+1360 files in other folders)
